--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ui_test">
+    package="com.example.uitest">
    <application
-        android:label="ui_test"
-        android:name="${applicationName}"
+        android:label="uitest"
+
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
