--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  flutter_appauth: ^4.2.1
+  flutter_secure_storage: ^7.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,7 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - images/logo.png
-      - C:\Users\Veronika\Desktop\flutter\ui_test\images\logo.png
+      #- C:\Users\Veronika\Desktop\flutter\ui_test\images\logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
